Backport release automation and github actions
Closes gh-11501